Fix gaps

--- a/components/nav/nav.css
+++ b/components/nav/nav.css
@@ -17,7 +17,3 @@
 .nav__item_active {
     color: var(--tenne);
 }
-
-.nav__item_back {
-    margin-top: 30px;
-}
