--- a/pages/template.css
+++ b/pages/template.css
@@ -8,6 +8,10 @@
     background-color: var(--grey-1);
 }
 
+.page__nav {
+    margin-right: 55px;
+}
+
 .page__header {
     background-color: var(--grey-1);
     grid-column-start: span 3;
@@ -27,7 +31,7 @@
     font-size: 28px;
     line-height: 38px;
     color: var(--grey-4);
-    margin-bottom: 10px;
+    margin-bottom: 60px;
 }
 
 .content__component_tooltip {
@@ -37,10 +41,10 @@
 
 .content__component_input {
     display: grid;
-    grid-template-columns: repeat(3, auto);
+    grid-template-columns: repeat(3, max-content);
     grid-template-rows: repeat(3, auto);
     grid-auto-flow: column;
-    grid-gap: 30px;
+    grid-gap: 15px 30px;
 }
 
 .page__footer {
